# RC-FTP-Final

./: README.md
FTP_Client_2/: CMakeLists.txt
FTP_CreateDB_2/: CMakeLists.txt  clients.db  main.cpp
FTP_CreateDB_2/sqlite/: Makefile  config.status
FTP_Server_2/: CMakeLists.txt  Commands.cpp  Commands.h  Connection.cpp  Connection.h  clients.db  createDB.cpp  createDB.h  main.cpp
FTP_Server_2/Garmin/FTP/: 2.cpp
FTP_Server_2/sqlite/: libtool
